portable Docker detection, fix surefire env pass-through
- remove all /Users/froran hardcoded paths from pom.xml and test code
- add socket auto-detection probing 4 well-known locations at runtime,
  using Java UnixDomainSocketAddress to verify connectivity
- pass DOCKER_HOST from shell through pom.xml via ${env.DOCKER_HOST}
  as system property (not env var, to avoid empty-string override)
- add doc/testcontainers-setup.md with full setup guide
- tests skip gracefully when Docker is unreachable